--- a/pom.xml
+++ b/pom.xml
@@ -72,11 +72,12 @@
             <optional>true</optional>
         </dependency>
 		
+		<!-- fake data generator -->
         <dependency>
-            <groupId>org.webjars</groupId>
-            <artifactId>bootstrap</artifactId>
-            <version>${bootstrap.version}</version>
-        </dependency>
+			<groupId>com.thedeanda</groupId>
+			<artifactId>lorem</artifactId>
+			<version>2.1</version>
+		</dependency>
      
 	</dependencies>
 
