--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,12 @@
     			<artifactId>spring-boot-starter-thymeleaf</artifactId> 
 		</dependency>
 		
+		<dependency>
+            <groupId>org.thymeleaf.extras</groupId>
+                <artifactId>thymeleaf-extras-springsecurity4</artifactId>
+                <version>3.0.1.RELEASE</version>
+        </dependency>
+		
 		<!-- hot swapping, disable cache for template, enable live reload -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
